codex-rs/tui/src/snapshots/codex_tui__history_cell__tests__active_query_project_snapshot.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
• Searching
  └ codex_apps.query_project({"query":"authentication middleware","limit":5})
