codex-rs/tui/src/snapshots/codex_tui__history_cell__tests__coalesced_reads_dedupe_names.snap
---
source: tui/src/history_cell.rs
expression: rendered
# tui/src/snapshots/codex_tui__history_cell__tests__coalesced_reads_dedupe_names.snap
---
• Explored
  └ Read auth.rs, shimmer.rs
