codex-rs/tui/src/snapshots/codex_tui__history_cell__tests__completed_query_project_success_snapshot.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
• Searched
  └ codex_apps.query_project({"query":"authentication middleware","limit":5})
    {"results": [{"path": "src/auth.rs", "score": 0.92}]}
